removed the flex display from the posted sale items component. fixed the rent history - currently renting view. updated the rented item model and migration file so that the item descriptoin can be added to the page. fixed the distorted item photos on the homepage

--- a/client/src/components/homepage/homepage.css
+++ b/client/src/components/homepage/homepage.css
@@ -147,17 +147,6 @@
   border-top: 2px solid black
 }
 
-.item-image{
-  height: 100%;
-  width: 100rem;
-  margin-bottom: 90px;
-}
-
-.item-image-homepage{
-  height: 100%;
-  width: 80%;
-}
-
 .fade-test {
   z-index: 9;
   background-color: #ff5e00;
@@ -416,15 +405,11 @@
   display: flex
 }
 
-/* .home-page-rent-items-container__photos-outer-container{
-
-} */
-
-.home-page-rent-items-container__photos-inner-container{
+/* .home-page-rent-items-container__photos-inner-container{
   margin-top: 20px;
   margin-bottom: 200px;
   margin-left: 20px;
-}
+} */
 
 .home-page-sale-items-container__photos-inner-container__expand-icon-outer-container{
   display: flex;
